--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
     "name": "raycaster",
     "version": "1.0.0",
     "description": "Test raycaster",
-    "author": "rpusec",
-    "devDependencies": {
-      "pixi.js": "6.2.2"
-    }
+    "author": "rpusec"
   }
   
