--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
+    "postpackage": "node compile-to-bytenode",
     "make": "electron-forge make"
   },
   "author": "rpusec",
@@ -18,7 +19,9 @@
     "@electron-forge/maker-rpm": "^6.0.0",
     "@electron-forge/maker-squirrel": "^6.0.0",
     "@electron-forge/maker-zip": "^6.0.0",
-    "electron": "^21.2.2"
+    "electron": "^21.2.2",
+    "bytenode": "1.3.7",
+    "@babel/preset-env": "7.20.2"
   },
   "config": {
     "forge": {
