--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "author": "rpusec",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "bytenode": "1.3.7"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0",
@@ -20,7 +21,6 @@
     "@electron-forge/maker-squirrel": "^6.0.0",
     "@electron-forge/maker-zip": "^6.0.0",
     "electron": "^21.2.2",
-    "bytenode": "1.3.7",
     "@babel/preset-env": "7.20.2"
   },
   "config": {
